Added solutions for HW 12

--- a/6-042j-fall-2010/Homeworks/HW12.md
+++ b/6-042j-fall-2010/Homeworks/HW12.md
@@ -115,3 +115,5 @@ as $x \rightarrow \infty$. The transition there is via Stirling's formula.
 
 ## Notes
 I wish solutions were available. In particular, I'd be anxious to know how well I matched the "official" solution to Problem 4, and I'd like to know what the deal is with 6(d).
+
+On problem 4, I might have gotten a better bound using Chernoff rather than Chebyshev. I'm wary of both methods, in fact, because this homework was supposedly due before the class even covered those methods. So...
